--- a/main.css
+++ b/main.css
@@ -22,8 +22,14 @@
 	left: 0;
 }
 
+.story > .left > p {
+	margin: 0px;
+}
+
 .story > .left > .title {
 	text-overflow: ellipsis;
+	overflow: hidden;
+	white-space: nowrap;
 }
 
 .story > .left > .domain {
@@ -35,6 +41,10 @@
 	right: 0;
 	text-align: right;
 	background-color: #DDD;
+}
+
+.story > .right > p {
+	margin: 0px;
 }
 
 .story > .right > .time {
