--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+* {
+	font-family: -apple-system, BlinkMacSystemFont, Helvetica, Arial, sans-serif;
+}
+
 #stories {
 	list-style: none;
 	padding-left: 0px;
@@ -37,7 +41,7 @@
 }
 
 .story .right {
-	width: calc(100% * 0.2 - 10px);
+	width: calc(100% * 0.2 - 11px);
 	right: 0;
 	text-align: right;
 	background-color: #DDD;
