--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,11 @@
 	font-family: -apple-system, BlinkMacSystemFont, Helvetica, Arial, sans-serif;
 }
 
+a {
+	white-space: pre-wrap;
+	word-wrap: break-word;
+}
+
 #stories {
 	list-style: none;
 	padding-left: 0px;
@@ -53,4 +58,26 @@
 
 .story .votes {
 	float: left;
+}
+
+ul#comments {
+	padding-left: 0px;
+}
+
+ul#comments li {
+	list-style: none;
+	background-color: #EEE;
+	border-left: 5px solid #DDD;
+}
+
+ul#comments li .details {
+	background-color: #DDD;
+	padding-left: 5px;
+	padding-top: 8px;
+	padding-bottom: 8px;
+}
+
+ul#comments li p:not(.details) {
+	padding-bottom: 16px;
+	padding-left: 5px;
 }
