--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,7 @@
 
 .story .left {
 	width: calc(100% * 0.8 - 10px);
-	left: 0;
+	float: left;
 }
 
 .story .title {
@@ -41,8 +41,7 @@
 }
 
 .story .right {
-	width: calc(100% * 0.2 - 11px);
-	right: 0;
+	width: calc(100% * 0.2 - 6px);
 	text-align: right;
 	background-color: #DDD;
 }
